--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,18 +1,17 @@
 name: Deploy to GitHub Pages
-
 on:
   push:
     branches:
       - main
       - master
 
+permissions:
+  pages: write
+  id-token: write
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    permissions:
-      pages: write
-      id-token: write
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -23,7 +22,7 @@ jobs:
       - name: Upload static content
         uses: actions/upload-pages-artifact@v1
         with:
-          path: '.'  # Change if you want to publish only a subfolder
+          path: '.'   # change if you want to publish only a subfolder
 
       - name: Deploy to Pages
         uses: actions/deploy-pages@v1
