--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -7,24 +7,30 @@ on:
       - master
 
 permissions:
+  contents: read
   pages: write
   id-token: write
+  actions: read
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v5
 
       - name: Upload static content
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
-          path: '.'   # change if you want to publish a subfolder like 'dist' or 'docs'
+          path: "."
 
       - name: Deploy to Pages
-        uses: actions/deploy-pages@v1
+        id: deployment
+        uses: actions/deploy-pages@v4
