--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,4 +1,5 @@
 name: Deploy to GitHub Pages
+
 on:
   push:
     branches:
@@ -6,6 +7,7 @@ on:
       - master
 
 permissions:
+  contents: read
   pages: write
   id-token: write
 
@@ -22,9 +24,9 @@ jobs:
           enablement: true
 
       - name: Upload static content
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-pages-artifact@v3
         with:
-          path: '.'   # change if you want to publish only a subfolder
+          path: "."
 
       - name: Deploy to Pages
         uses: actions/deploy-pages@v1
