--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,13 +1,9 @@
 name: Deploy to GitHub Pages
-
 on:
   push:
-    branches:
-      - main
-      - master
+    branches: [ main ]
 
 permissions:
-  contents: read
   pages: write
   id-token: write
 
@@ -24,9 +20,9 @@ jobs:
           enablement: true
 
       - name: Upload static content
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-pages-artifact@v1
         with:
-          path: "."
+          path: '.'
 
       - name: Deploy to Pages
         uses: actions/deploy-pages@v1
